--- a/MapEditor/MainWindow.xaml
+++ b/MapEditor/MainWindow.xaml
@@ -4,17 +4,49 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MapEditor"
+        xmlns:p="clr-namespace:MapEditor.Properties"
         xmlns:vm="clr-namespace:MapEditor.ViewModels"
+        xmlns:mod="clr-namespace:MapEditor.Models"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Height="528.5"
+        Title="MainWindow" Width="532.5">
     <Window.DataContext>
         <vm:ViewModel/>
     </Window.DataContext>
     <Window.Resources>
         <local:SampleConverter x:Key="SampleConverter" />
     </Window.Resources>
-    <Grid>
-        <Button Content="Yes No Dialog" Command="{Binding YesNoCommand}" HorizontalAlignment="Left" Margin="123,91,0,0" VerticalAlignment="Top" />
-        <Button Content="Alert Dialog" Command="{Binding AlertCommand}" HorizontalAlignment="Left" Margin="309,109,0,0" VerticalAlignment="Top" />
-    </Grid>
+    <DockPanel LastChildFill="True">
+        <Menu DockPanel.Dock="Top" FontSize="16">
+            <MenuItem Header="_File">
+                <MenuItem Header="_Open..." Command="{Binding FileDialogCommand}"/>
+                <MenuItem Header="_Save..."/>
+                <Separator Height="20"/>
+                <MenuItem Background="Orange" Header="Exit"/>
+            </MenuItem>
+            <MenuItem Header="_Edit"/>
+            <MenuItem Header="_Map"/>
+            <MenuItem Header="_Help"/>
+        </Menu>
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBlock Text="{Binding Map.Width, StringFormat='Width: {0}'}"/>
+            </StatusBarItem>
+            <Separator/>
+            <StatusBarItem>
+                <TextBlock Text="{Binding Map.Height, StringFormat='Height: {0}'}"/>
+            </StatusBarItem>
+        </StatusBar>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Image Source="{Binding Bitmap}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <local:TiledImageControl Background="Yellow" Grid.Column="2" Source="{Binding TileSheet}"/>
+            <GridSplitter Background="Bisque" HorizontalAlignment="Stretch" Grid.Column="1"/>
+            <Button Content="Button" Command="{Binding BlitCommand}" HorizontalAlignment="Left" Margin="205,423,0,0" VerticalAlignment="Top" Width="75"/>
+        </Grid>
+    </DockPanel>
 </Window>
