--- a/MapEditor/MainWindow.xaml
+++ b/MapEditor/MainWindow.xaml
@@ -4,9 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MapEditor"
-        xmlns:p="clr-namespace:MapEditor.Properties"
+        xmlns:controls="clr-namespace:MapEditor.Controls"
         xmlns:vm="clr-namespace:MapEditor.ViewModels"
-        xmlns:mod="clr-namespace:MapEditor.Models"
         mc:Ignorable="d"
         Height="528.5"
         Title="MainWindow" Width="532.5">
@@ -44,10 +43,11 @@
                 <ColumnDefinition Width="5"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Image Source="{Binding Bitmap}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            <local:TiledImageControl Background="Yellow" Grid.Column="2" Source="{Binding TileSheet}"/>
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <Image Source="{Binding MapRepresentation}" Stretch="None" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            </ScrollViewer>
+            <controls:TiledImageControl Background="Yellow" Grid.Column="2" Source="{Binding Map.TileSheet}"/>
             <GridSplitter Background="Bisque" HorizontalAlignment="Stretch" Grid.Column="1"/>
-            <Button Content="Button" Command="{Binding BlitCommand}" HorizontalAlignment="Left" Margin="205,423,0,0" VerticalAlignment="Top" Width="75"/>
         </Grid>
     </DockPanel>
 </Window>
